@@ -36,6 +36,18 @@
 <div class="document">
 
 
+<p>2012-07-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/studio.h (MAGICK_CACHE_LINE_SIZE): Assume a cache line
+size of 64 bytes except for on PowerPC which uses 128.</li>
+<li>magick/pixel_cache.c: Use aligned memory allocator to allocate
+structures and buffers which might suffer from false cache line
+sharing</li>
+<li>magick/memory.c (MagickMallocAligned): Also round up allocation
+size to alignment.</li>
+</ul>
+</blockquote>
 <p>2012-07-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
