@@ -40,18 +40,18 @@
 <div class="contents topic" id="contents">
 <p class="topic-title first">Contents</p>
 <ul class="simple">
-<li><a class="reference internal" href="#magickallocfunctions" id="id21">MagickAllocFunctions</a></li>
-<li><a class="reference internal" href="#magickmalloc" id="id22">MagickMalloc</a></li>
-<li><a class="reference internal" href="#magickmallocaligned" id="id23">MagickMallocAligned</a></li>
-<li><a class="reference internal" href="#magickmalloccleared" id="id24">MagickMallocCleared</a></li>
-<li><a class="reference internal" href="#magickclonememory" id="id25">MagickCloneMemory</a></li>
-<li><a class="reference internal" href="#magickrealloc" id="id26">MagickRealloc</a></li>
-<li><a class="reference internal" href="#magickfree" id="id27">MagickFree</a></li>
-<li><a class="reference internal" href="#magickfreealigned" id="id28">MagickFreeAligned</a></li>
+<li><a class="reference internal" href="#magickallocfunctions" id="id17">MagickAllocFunctions</a></li>
+<li><a class="reference internal" href="#magickmalloc" id="id18">MagickMalloc</a></li>
+<li><a class="reference internal" href="#magickmallocaligned" id="id19">MagickMallocAligned</a></li>
+<li><a class="reference internal" href="#magickmalloccleared" id="id20">MagickMallocCleared</a></li>
+<li><a class="reference internal" href="#magickclonememory" id="id21">MagickCloneMemory</a></li>
+<li><a class="reference internal" href="#magickrealloc" id="id22">MagickRealloc</a></li>
+<li><a class="reference internal" href="#magickfree" id="id23">MagickFree</a></li>
+<li><a class="reference internal" href="#magickfreealigned" id="id24">MagickFreeAligned</a></li>
 </ul>
 </div>
 <div class="section" id="magickallocfunctions">
-<h1><a class="toc-backref" href="#id21">MagickAllocFunctions</a></h1>
+<h1><a class="toc-backref" href="#id17">MagickAllocFunctions</a></h1>
 <div class="section" id="synopsis">
 <h2>Synopsis</h2>
 <pre class="literal-block">
@@ -80,7 +80,7 @@ void MagickAllocFunctions( MagickFreeFunc free_func, MagickMallocFunc malloc_fun
 </div>
 </div>
 <div class="section" id="magickmalloc">
-<h1><a class="toc-backref" href="#id22">MagickMalloc</a></h1>
+<h1><a class="toc-backref" href="#id18">MagickMalloc</a></h1>
 <div class="section" id="id1">
 <h2>Synopsis</h2>
 <pre class="literal-block">
@@ -104,7 +104,7 @@ void *MagickMalloc( const size_t size );
 </div>
 </div>
 <div class="section" id="magickmallocaligned">
-<h1><a class="toc-backref" href="#id23">MagickMallocAligned</a></h1>
+<h1><a class="toc-backref" href="#id19">MagickMallocAligned</a></h1>
 <div class="section" id="id3">
 <h2>Synopsis</h2>
 <pre class="literal-block">
@@ -115,21 +115,17 @@ void *MagickMallocAligned( size_t alignment, const size_t size );
 <h2>Description</h2>
 <p>MagickMallocAligned() allocates memory and returns a pointer to a
 block of memory capable of storing at least size bytes with the
-allocation's base address being an even multiple of alignment.</p>
+allocation's base address being an even multiple of alignment.
+The size of the buffer allocation is rounded up as required in
+order to consume a block of memory starting at least at the requested
+alignment and ending at at least the requested alignment.</p>
 <p>The requested alignment should be a power of 2 at least as large as
-sizeof(void <a href="#id5"><span class="problematic" id="id6">*</span></a>).  The requested alignment is increased to sizeof(void <a href="#id7"><span class="problematic" id="id8">*</span></a>)
-if it is less than sizeof(void <a href="#id9"><span class="problematic" id="id10">*</span></a>).</p>
+sizeof(void <a href="#id5"><span class="problematic" id="id6">*</span></a>).</p>
 <div class="system-message" id="id5">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/api/memory.apirst</tt>, line 91); <em><a href="#id6">backlink</a></em></p>
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/api/memory.apirst</tt>, line 94); <em><a href="#id6">backlink</a></em></p>
 Inline emphasis start-string without end-string.</div>
-<div class="system-message" id="id7">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/api/memory.apirst</tt>, line 91); <em><a href="#id8">backlink</a></em></p>
-Inline emphasis start-string without end-string.</div>
-<div class="system-message" id="id9">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/api/memory.apirst</tt>, line 91); <em><a href="#id10">backlink</a></em></p>
-Inline emphasis start-string without end-string.</div>
-<p>NULL is returned if insufficient memory is available or the requested
-size is zero.</p>
+<p>NULL is returned if insufficient memory is available, the requested
+size is zero, or integer overflow was detected.</p>
 <p>This function is intended for allocating special-purpose buffers
 which benefit from specific alignment.</p>
 <p>The format of the  MagickMallocAligned method is:</p>
@@ -144,14 +140,14 @@ void *MagickMallocAligned( size_t alignment, const size_t size );
 </div>
 </div>
 <div class="section" id="magickmalloccleared">
-<h1><a class="toc-backref" href="#id24">MagickMallocCleared</a></h1>
-<div class="section" id="id11">
+<h1><a class="toc-backref" href="#id20">MagickMallocCleared</a></h1>
+<div class="section" id="id7">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void *MagickMallocCleared( const size_t size );
 </pre>
 </div>
-<div class="section" id="id12">
+<div class="section" id="id8">
 <h2>Description</h2>
 <p>MagickMallocCleared() returns a pointer to a block of memory of at least
 size bytes suitably aligned for any use.  NULL is returned if insufficient
@@ -169,14 +165,14 @@ void *MagickMallocCleared( const size_t size );
 </div>
 </div>
 <div class="section" id="magickclonememory">
-<h1><a class="toc-backref" href="#id25">MagickCloneMemory</a></h1>
-<div class="section" id="id13">
+<h1><a class="toc-backref" href="#id21">MagickCloneMemory</a></h1>
+<div class="section" id="id9">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void *MagickCloneMemory( void *destination, const void *source, const size_t size );
 </pre>
 </div>
-<div class="section" id="id14">
+<div class="section" id="id10">
 <h2>Description</h2>
 <p>MagickCloneMemory() copies size bytes from memory area source to the
 destination.  Copying between objects that overlap will take place
@@ -192,14 +188,14 @@ void *MagickCloneMemory( void *destination, const void *source, const size_t siz
 </div>
 </div>
 <div class="section" id="magickrealloc">
-<h1><a class="toc-backref" href="#id26">MagickRealloc</a></h1>
-<div class="section" id="id15">
+<h1><a class="toc-backref" href="#id22">MagickRealloc</a></h1>
+<div class="section" id="id11">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void *MagickRealloc( void *memory, const size_t size );
 </pre>
 </div>
-<div class="section" id="id16">
+<div class="section" id="id12">
 <h2>Description</h2>
 <p>MagickRealloc() changes the size of the memory and returns a pointer to
 the (possibly moved) block.  The contents will be unchanged up to the
@@ -220,14 +216,14 @@ void *MagickRealloc( void *memory, const size_t size );
 </div>
 </div>
 <div class="section" id="magickfree">
-<h1><a class="toc-backref" href="#id27">MagickFree</a></h1>
-<div class="section" id="id17">
+<h1><a class="toc-backref" href="#id23">MagickFree</a></h1>
+<div class="section" id="id13">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void MagickFree( void *memory );
 </pre>
 </div>
-<div class="section" id="id18">
+<div class="section" id="id14">
 <h2>Description</h2>
 <p>MagickFree() frees memory that has already been allocated by
 MagickMalloc() or other other other allocators directly compatible
@@ -245,14 +241,14 @@ void MagickFree( void *memory );
 </div>
 </div>
 <div class="section" id="magickfreealigned">
-<h1><a class="toc-backref" href="#id28">MagickFreeAligned</a></h1>
-<div class="section" id="id19">
+<h1><a class="toc-backref" href="#id24">MagickFreeAligned</a></h1>
+<div class="section" id="id15">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void MagickFreeAligned( void *memory );
 </pre>
 </div>
-<div class="section" id="id20">
+<div class="section" id="id16">
 <h2>Description</h2>
 <p>MagickFreeAligned() frees aligned memory that has previously been
 allocated via MagickMallocAligned(). For convenience, a NULL argument is
